[gd_scene load_steps=3 format=3 uid="uid://ccvgtoywto0gv"]

[ext_resource type="Theme" uid="uid://cc3spoahv8kbm" path="res://new_theme.tres" id="1_hvgl6"]
[ext_resource type="Script" path="res://Script/Title.gd" id="1_twtms"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 4.0
offset_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_twtms")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 388.0
offset_right = 647.0
offset_bottom = 419.0
text = "开始游戏"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 436.0
offset_right = 647.0
offset_bottom = 467.0
text = "读取存档"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 484.0
offset_right = 646.0
offset_bottom = 517.0
text = "设置"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -4.0
offset_right = 1155.0
offset_bottom = 641.0

[node name="TitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("1_hvgl6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Gereal Fish"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_Entering_game"]
[connection signal="pressed" from="Button2" to="." method="_Loading_game"]
[connection signal="pressed" from="Button3" to="." method="_Game_Setting"]
