extends Node


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
#这个是实现“进入游戏的函数”
func _Entering_game() -> void:
	pass
#介个是实现“游戏设置”的函数
func _Game_Setting() -> void:
	pass
#介个是实现“读取存档”的函数
func _Loading_game() -> void:
	pass
